# target/generated-sources/src/main/java/com/manulife/ap/rsf_connect_mongodb/swagger/api/HomeApi.java
@@ -1,36 +1,0 @@
-/**
- * NOTE: This class is auto generated by the swagger code generator program (2.3.0).
- * https://github.com/swagger-api/swagger-codegen
- * Do not edit the class manually.
- */
-package com.manulife.ap.rsf_connect_mongodb.swagger.api;
-
-import com.manulife.ap.rsf_connect_mongodb.swagger.model.HomeResponse;
-import io.swagger.annotations.*;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
-import org.springframework.web.bind.annotation.PathVariable;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestHeader;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestMethod;
-import org.springframework.web.bind.annotation.RequestParam;
-import org.springframework.web.bind.annotation.RequestPart;
-import org.springframework.web.multipart.MultipartFile;
-
-import javax.validation.Valid;
-import javax.validation.constraints.*;
-import java.util.List;
-
-@Api(value = "home", description = "the home API")
-public interface HomeApi {
-
-    @ApiOperation(value = "", nickname = "homeGet", notes = "get all doctor", response = HomeResponse.class, tags={  })
-    @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "successful operation", response = HomeResponse.class) })
-    @RequestMapping(value = "/home",
-        produces = { "application/json" }, 
-        method = RequestMethod.GET)
-    ResponseEntity<HomeResponse> homeGet();
-
-}
